--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+971552466432">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
-                    +971-055-2466432</a> <a class="btn btn-sm btn-primary display-4" href="mujtaba_resume.pdf" target="_blank"><span class="mbrib-download mbr-iconfont mbr-iconfont-btn"></span>
+                    +971-055-2466432</a> <a class="btn btn-sm btn-primary display-4" href="Mujtaba_Resume.pdf" target="_blank"><span class="mbrib-download mbr-iconfont mbr-iconfont-btn"></span>
                     
                     Download My Resume</a></div>
         </div>
