--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4dcBtV2JbWDzAa+DvObPBI756tklr+JgrbCJ0fJxgzIbTN0YyBoXDLT4HdCCjhTkRn+23JdvqUQEHBnhrxHk/+Iz/qvAnvgz9NTLIrVg7I10Z92mzzKAjW3J3aez11J2" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VGxRkluUgSpyltIv+f9zm3n4pj+3QKSzFGTfeNVU1CNnR8RLOZVrewKsoTCFkCwAthqX9ySUWwqjPjs5bi+wvwFz00upJNgh+3PpYXSCnD5zLR+0JJdmMwL/tEtfoWNm" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -429,7 +429,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright - All Rights Reserved
+                    © Mujtaba - All Rights Reserved
                 </p>
             </div>
         </div>
