--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
   <link rel="shortcut icon" href="assets/images/muj-128x170.png" type="image/x-icon">
   <meta name="description" content="Muhammad Mujtaba Kamal 2018">
   <title>Mujtaba</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/as-pie-progress/css/progress.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -99,7 +97,7 @@
                 <div class="panel-item">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/muj-1-675x900.png" alt="" title="">
+                            <img src="assets/images/41334941-908875219303914-6676629096602009600-o-1-240x241.jpg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7"></p>
                     </div>
@@ -153,7 +151,7 @@
                         </div>
                         <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_2">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">Age:	28 Years 
+                                <p class="mbr-fonts-style panel-text display-7">Age:	29 Years 
 <br>Gender:	Male 
 <br>Blood Group:	B+ 
 <br>Religion:	Muslim 
@@ -347,7 +345,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AvnC3BKwJGLA6jeHsCf9vYjNxjnOl4VCp4kdASZeSesOxCdVEBuzGPXOv7lQ9xLuiKSD+mjsvPS8ZRhhuz4unmr3UJ9XHu1gFX6hrZPmnQ9ERbkDwXbFNxjpO3fl7jST" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Xc2Uu0hZ72TNWHrvMCx/AlCgScy1GU//p8hEHFXb4XP8z+Z1JflviQhNjGw8fE2G6y0Sjtta3VWLygN2cgs84Href1gwBBqEgitQzSclBLqs26CEDcHSO5OZH3ZzJwoB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -428,9 +426,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Mujtaba - All Rights Reserved
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">https://mujtaba989.github.io - 2017</p>
             </div>
         </div>
     </div>
@@ -441,9 +437,9 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
