--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
     </nav>
 </section>
 
-<section class="testimonials5 cid-qLpQsjm6wE" id="testimonials5-7">
+<section class="testimonials5 cid-qLpQsjm6wE" data-bg-video="https://vimeo.com/308289582" id="testimonials5-7">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(51, 51, 51);">
+    <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(255, 255, 255);">
     </div>
     <div class="container">
         <div class="media-container-row">
@@ -483,7 +483,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="U2O3QJeE6IS05uUWEq20VVSfIckLQ040FatoLJbDKRwcin92Fom32Tg/SU+6taLaBbOxTqp+MCAZTP9hdngAbg8O0ANChhaUDcgxEKxpccuJnryqCkgTtG3GxXUzM1Qz" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k0Qp/vbGufoZq+ZylnE5NED1zE552ncPw/QMEe5u9ya6P3MWtQMMn0TIwZyDQr7dT6FHSxRPk3MqD/azC4/k0YKz88kZ/5PAb6kIlsQXbM8/BLX/XBHU3GBXNf/oAlaS" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -578,6 +578,8 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/datatables/jquery.data-tables.min.js"></script>
   <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
