--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/m-128x128.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/m-128x128-1.png" type="image/x-icon">
   <meta name="description" content="Muhammad Mujtaba Kamal 2017">
+  
   
   <title>muجtaba</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/as-pie-progress/css/progress.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
 <body>
 
-<!-- Google Analytics -->
+<!-- Analytics -->
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="assets/css/contact-buttons.css">
 <link rel="stylesheet" href="assets/css/demo.css">
@@ -44,7 +46,10 @@
 
   gtag('config', 'UA-115573141-1');
 </script>
-<!-- /Google Analytics -->
+
+
+<script data-ad-client="ca-pub-8432167247702147" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- /Analytics -->
 
 
   <section class="menu cid-qLq116aZ3G" once="menu" id="menu2-d">
@@ -71,7 +76,7 @@
                     <a class="nav-link link text-white display-4" href="index.html#form1-5">
                         Contact</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+971552466432">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/+923463510531">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
                     +92 346 3510531</a> <a class="btn btn-sm btn-primary display-4" href="Mujtaba_Resume.pdf" target="_blank"><span class="mbrib-download mbr-iconfont mbr-iconfont-btn"></span>
@@ -343,14 +348,14 @@
                         </div>
                         <div id="collapse2_5" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_5">
                             <div class="panel-body p-4">
-                                <p class="mbr-fonts-style panel-text display-7">Age:	29 Years 
+                                <p class="mbr-fonts-style panel-text display-7">Age:	31 Years 
 <br>Gender:	Male 
 <br>Blood Group:	B+ 
 <br>Religion:	Muslim 
 <br>Region:	SHJ, UAE 
 <br>Hobbies:	Photography, Programming
 <br>Profession:	IT Support
-<br>Martial Status:	Single</p>
+<br>Martial Status:	Married</p>
                             </div>
                         </div>
                     </div>
@@ -482,7 +487,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RkqfdALL/yQzyv3TwF8WfX/EnKfhw8tsklCWvBDKfHcp7AobDAzoZ0zraeXGHMlGs9Gmz1o1C/WfbkA9QZKugYM7SFzbf5yLlVBDYpHlwPaRb7xGrJnEOnxMpzUO9LWI">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lv0FFOZbZiYsgkJw29mIWd5GbJyLsMSZecp9p1KMY7AykCgJ7QFJAJgaaLpKcdrkS4xxP5+Wx7QJv0a1ANH4HWBPivJj8XjndHlDkz4vn5OeW1zJUswsf1eiIsJ6JG0I">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -572,12 +577,15 @@
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
+  <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
+  <script src="https://apis.google.com/js/plusone.js"></script>
+  <script src="assets/facebook-plugin/facebook-script.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/datatables/jquery.data-tables.min.js"></script>
   <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
