--- a/index.html
+++ b/index.html
@@ -50,17 +50,8 @@
 
 <script data-ad-client="ca-pub-8432167247702147" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- rec_res -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-8432167247702147"
-     data-ad-slot="3193377698"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+
 <!-- /Analytics -->
 
 
@@ -242,6 +233,16 @@
       </div>
     </div>
 </section>
+
+
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-8432167247702147"
+     data-ad-slot="3193377698"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
 
 <section class="clients cid-rdloyRp1iq" id="clients-u">
       
@@ -499,7 +500,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e7c3c1Vzgc0hwSeMWA+7TUi2e7wdy3X5Zjw6vqGmU8mlm6Bl7NNnQpFYz7BLAjipFRuzK51FwC8Dv+bmiHAMOzVWV6LNJr4Ts+dcABB3iVr/Hq5JyxvpdO7P2f854ihd">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e+ZEnfHfumEZccHLis/GL56wbiTehW5Gp/s3qHiU/HsXbLLS1tLLAorluYKjHTf8MMVACYqgeRaKRkbhbHLGGI9dGUiLGsaZM8VUfQwwIj/MmKbMQl+l5zkXbmQjKivL">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
