--- a/index.html
+++ b/index.html
@@ -235,14 +235,17 @@
 </section>
 
 
-<amp-ad width="100vw" height="320"
-     type="adsense"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- rec_res -->
+<ins class="adsbygoogle"
+     style="display:block"
      data-ad-client="ca-pub-8432167247702147"
      data-ad-slot="3193377698"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <section class="clients cid-rdloyRp1iq" id="clients-u">
       
