--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
+<script data-ad-client="ca-pub-8432167247702147" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <!-- /Analytics -->
 
 
@@ -233,19 +235,6 @@
       </div>
     </div>
 </section>
-
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- rec_res -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-8432167247702147"
-     data-ad-slot="3193377698"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
 <section class="clients cid-rdloyRp1iq" id="clients-u">
       
@@ -503,7 +492,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e+ZEnfHfumEZccHLis/GL56wbiTehW5Gp/s3qHiU/HsXbLLS1tLLAorluYKjHTf8MMVACYqgeRaKRkbhbHLGGI9dGUiLGsaZM8VUfQwwIj/MmKbMQl+l5zkXbmQjKivL">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="og/fAeH0Kh1H1qHtHR+hEiAvNuU4+a2g2LwGyI5qNtv/BZaVAbxOe1AgXyWLxszJlxYLauIwQ3vOSkHH2mvgQPb+JzrYaZRpjfMzOv7lCHPxODjPi8HA7pHuZ94luBrd">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
