--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  
+  
+  
+</head>
+<body>
+
+<!-- Analytics -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="assets/css/contact-buttons.css">
 <link rel="stylesheet" href="assets/css/demo.css">
-<!-- Analytics -->
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="assets/js/jquery.contact-buttons.js"></script>
 <script src="assets/js/demo.js"></script>
 
@@ -43,12 +48,6 @@
 </script>
 
 <!-- /Analytics -->
-  
-  
-</head>
-<body>
-
-
 
 
   <section class="menu cid-qLq116aZ3G" once="menu" id="menu2-d">
@@ -486,7 +485,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZD0Zlb3s11VTXW0p6Fu58sh/gOX9SWLX3EEoA5E6Qcy3xO98ZiQSC+TWujnKJnmcP+daeEXZd3BEpYY63Y45jBx+VAr4phanoATA/a8jL3/yoePSTwe6+Pc/JJxvGajO">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="32Q9S87U3Bw7oDFweq7MfJszzXLrHmqqrWCUL8p0+EyVl8UwjnB+92+kTa4VKIbLcP2AePk5f00877x7hzkbAinKD8XMeRFsGCAYX2+iTT89MWT96WlUz1rd+aorBuQ0">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -594,7 +593,6 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
-  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
