--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         </div>
 </div></section>
 
-<section class="mbr-social-feed loading" id="feed-v" data-facebook="" data-facebooktoken="" data-twitter="" data-posts="3" data-youtube="https://www.youtube.com/channel/UCOxRqsjXER8UGjOT9ikLSPA" data-rv-view="186" style="background-color: rgb(51, 51, 51); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-v" data-facebook="" data-facebooktoken="" data-twitter="" data-posts="3" data-youtube="UCOxRqsjXER8UGjOT9ikLSPA" data-rv-view="186" style="background-color: rgb(51, 51, 51); padding-top: 0px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
@@ -493,7 +493,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vCGUIoPsg/4x1TEUyg7vnwxhpeXXNC5kVjZhnepS9tLzTxskhT9pTHistNi3WxjnrgKhHxUD4I7qr8O1ItP9tn1z+fAkSJ+2wcJxzoqq8hZQvP5fSa9samQZTUNdxz+q">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XOT5daMUKShkYnF9QVi5Gk8ssiHZ3yiQo6rr/weVxIzunKA08KDuljMxbYABLvSZcXGN6mPddgmC/rl1IeqYCiJQA7ZLFYQH5PO3PSQXQ4axgzvIyzjPYc4dcI5ULe3J">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
